--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,6 @@ repository = "https://github.com/joelburget/evm-rust"
 num = "0.1"
 bigint = "4.2.0"
 sha3 = "0.7.2"
-nibble = { git = "https://github.com/joelburget/nibble" }
+nibble_vec = "0.0.4"
 digest = "0.7"
 data-encoding = "2.1.0"
