--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ sha3 = "0.7.2"
 nibble_vec = "0.0.4"
 digest = "0.7"
 data-encoding = "2.1.0"
+serde = "1.0"
+serde_derive = "1.0"
+serde_json = "1.0"
